# shorties

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
db/: db.py
src/app/: alnumgen.py  constants.py  main.py
src/app/db/: db.py
src/app/db/models/: models.py
src/app/schemas/: schemas.py
src/models/: main.py  models.py  schemas.py
tests/: alnumgen_test.py  constants_test.py
