[project]
name = "shorties"
version = "0.1.0"
description = ""
authors = [
    {name = "iamserda",email = "12580399+iamserda@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
